added offline map proof-of-concept

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,12 @@
 		
 		<!-- ngCordova -->
 		<script src="lib/ng-cordova.js"></script>
+
+		<!-- localforage -->
+		<script src="lib/localforage.js"></script>
+		<script src="lib/angular-localForage.js"></script>
+
+
 		
 		<!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
