--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,10 @@
 		<!-- Leaflet -->
 		<link rel="stylesheet" href="lib/leaflet-0.7.3/leaflet.css" />
 		<script src="lib/leaflet-0.7.3/leaflet.js"></script>
+
+		<!-- leaflet draw -->
+    	<link href="lib/leaflet.draw/leaflet.draw.css" rel="stylesheet">
+		<script src="lib/leaflet.draw/leaflet.draw.js"></script>
 		
 		<!-- ngCordova -->
 		<script src="lib/ng-cordova.js"></script>
