--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <!-- your app's js -->
     <script src="js/controllers.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
     </head>
     <body ng-app="app">
       <ion-nav-view></ion-nav-view>
