--- a/www/index.html
+++ b/www/index.html
@@ -37,9 +37,18 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/controllers.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/services.js"></script>
+
+    <!-- ng controllers -->
+    <script src="js/controllers/menu.js"></script>
+    <script src="js/controllers/map.js"></script>
+    <script src="js/controllers/spot.js"></script>
+    <script src="js/controllers/spots.js"></script>
+    <script src="js/controllers/offlinemap.js"></script>
+
+    <!-- ng services -->
+    <script src="js/services/spots.js"></script>
+
     </head>
     <body ng-app="app">
       <ion-nav-view></ion-nav-view>
