add location details to new spot from map click

--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,7 @@
 
     <!-- ng services -->
     <script src="js/services/spots.js"></script>
+    <script src="js/services/newspot.js"></script>
 
     </head>
     <body ng-app="app">
