added point markers to the map

--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,8 @@
     <!-- ng services -->
     <script src="js/services/spots.js"></script>
     <script src="js/services/newspot.js"></script>
-
+    <script src="js/services/mapview.js"></script>
+    
     </head>
     <body ng-app="app">
       <ion-nav-view></ion-nav-view>
