save spot data as geojson

--- a/www/index.html
+++ b/www/index.html
@@ -16,15 +16,15 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 	
 	<!-- Leaflet Angular Directive -->
-	<script src="lib/angular-leaflet-directive.min.js"></script>
+<!--	<script src="lib/angular-leaflet-directive.min.js"></script>
 					
 	<!-- Leaflet -->
-	<link rel="stylesheet" href="lib/leaflet-0.7.3/leaflet.css" />
+<!--	<link rel="stylesheet" href="lib/leaflet-0.7.3/leaflet.css" />
 	<script src="lib/leaflet-0.7.3/leaflet.js"></script>
 
 	<!-- leaflet draw -->
-	<link href="lib/leaflet.draw/leaflet.draw.css" rel="stylesheet">
-	<script src="lib/leaflet.draw/leaflet.draw.js"></script>
+<!--	<link href="lib/leaflet.draw/leaflet.draw.css" rel="stylesheet">
+	<script src="lib/leaflet.draw/leaflet.draw.js"></script> -->
 	
 	<!-- ngCordova -->
 	<script src="lib/ng-cordova.js"></script>
@@ -36,7 +36,6 @@
     <!-- openlayers 3 -->
     <link rel="stylesheet" href="lib/ol3/ol.css" />
     <script src="lib/ol3/ol-debug.js"></script>
-
 
 	<!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
