separated offline functions into a factory

--- a/www/index.html
+++ b/www/index.html
@@ -56,6 +56,10 @@
     <script src="js/services/newspot.js"></script>
     <script src="js/services/mapview.js"></script>
 
+    <!-- ng factories -->
+    <script src="js/factories/OfflineTileFactory.js"></script>
+
+
     
     
     </head>
