began work on slippy tile name factory

--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,7 @@
 
     <!-- ng factories -->
     <script src="js/factories/OfflineTileFactory.js"></script>
+    <script src="js/factories/SlippyTileNamesFactory.js"></script>
     
     </head>
     <body ng-app="app">
