refactored spot data from localstorage to localforage database

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,9 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <!-- underscore -->
+    <script src="lib/underscore-1.7.0.js"></script>
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 	
@@ -48,6 +51,7 @@
     <!-- ng factories -->
     <script src="js/factories/OfflineTileFactory.js"></script>
     <script src="js/factories/SlippyTileNamesFactory.js"></script>
+    <script src="js/factories/SpotsFactory.js"></script>
     
     </head>
     <body ng-app="app">
