--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,13 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <!-- jquery -->
+    <script src="lib/jquery-2.1.1.min.js"></script>
+
+    <!-- bootstrap, WARNING: v3.x has breaking changes for popovers -->
+    <link rel="stylesheet" href="lib/bootstrap/bootstrap-2.3.2.min.css" />
+    <script src="lib/bootstrap/bootstrap-2.3.2.min.js"></script>
+
     <!-- underscore -->
     <script src="lib/underscore-1.7.0.js"></script>
 
