replaced bootstrap popover with ol3-popups

--- a/www/index.html
+++ b/www/index.html
@@ -12,13 +12,6 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
-    <!-- jquery -->
-    <script src="lib/jquery-2.1.1.min.js"></script>
-
-    <!-- bootstrap, WARNING: v3.x has breaking changes for popovers -->
-    <link rel="stylesheet" href="lib/bootstrap/bootstrap-2.3.2.min.css" />
-    <script src="lib/bootstrap/bootstrap-2.3.2.min.js"></script>
-
     <!-- underscore -->
     <script src="lib/underscore-1.7.0.js"></script>
 
@@ -35,6 +28,10 @@
     <!-- openlayers 3 -->
     <link rel="stylesheet" href="lib/ol3/ol.css" />
     <script src="lib/ol3/ol-debug.js"></script>
+
+    <!-- openlayers 3 popup (https://github.com/walkermatt/ol3-popup) -->
+    <link rel="stylesheet" href="lib/ol3/ol3-popup.css" />
+    <script src="lib/ol3/ol3-popup.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
