--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,6 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"/>
     <title>Strabo Mobile</title>
-
     <!-- Stylesheets -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -55,9 +54,17 @@
     <script src="js/factories/OfflineTileFactory.js"></script>
     <script src="js/factories/SlippyTileNamesFactory.js"></script>
     <script src="js/factories/SpotsFactory.js"></script>
-    
-    </head>
-    <body ng-app="app">
-      <ion-nav-view></ion-nav-view>
+	
+    <!-- override ol3 style -->
+    <style type="text/css">
+      .ol-rotate {
+        top: 4em;
+        right: .5em;
+        transition: opacity .25s
+      }
+    </style>
+  </head>
+  <body ng-app="app">
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
