begin work on integrating layer switcher and offline tiles

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,10 @@
     <link rel="stylesheet" href="lib/ol3/ol3-popup.css" />
     <script src="lib/ol3/ol3-popup.js"></script>
 
+    <!-- openlayers 3 layerswitcher -->
+    <link rel="stylesheet" href="lib/ol3/ol3-layerswitcher.css" />
+    <script src="lib/ol3/ol3-layerswitcher.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
