begin work on named offline map tiles

--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,7 @@
     <script src="js/controllers/spot.js"></script>
     <script src="js/controllers/spots.js"></script>
     <script src="js/controllers/offlinemap.js"></script>
+    <script src="js/controllers/mapname.js"></script>
 
     <!-- ng services -->
     <script src="js/services/spots.js"></script>
@@ -59,6 +60,8 @@
     <script src="js/factories/OfflineTileFactory.js"></script>
     <script src="js/factories/SlippyTileNamesFactory.js"></script>
     <script src="js/factories/SpotsFactory.js"></script>
+    <script src="js/factories/ViewExtentFactory.js"></script>
+    
   </head>
   <body ng-app="app">
     <ion-nav-view></ion-nav-view>
