renamed activity to archiveTiles

--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
     <script src="js/controllers/spot.js"></script>
     <script src="js/controllers/spots.js"></script>
     <script src="js/controllers/offlinemap.js"></script>
-    <script src="js/controllers/mapname.js"></script>
+    <script src="js/controllers/archiveTiles.js"></script>
 
     <!-- ng services -->
     <script src="js/services/spots.js"></script>
