added sizes to offline maps

--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,10 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- misc javascript utils : globals -->
+    <script src="js/misc.js"></script>
+
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
 
