initial commit for simulating points

--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,7 @@
     <script src="js/controllers/spots.js"></script>
     <script src="js/controllers/offlinemap.js"></script>
     <script src="js/controllers/archiveTiles.js"></script>
+    <script src="js/controllers/debug.js"></script>
 
     <!-- ng services -->
     <script src="js/services/spots.js"></script>
