added basic databse connectivity

--- a/www/index.html
+++ b/www/index.html
@@ -52,6 +52,7 @@
     <script src="js/controllers/map.js"></script>
     <script src="js/controllers/spot.js"></script>
     <script src="js/controllers/spots.js"></script>
+    <script src="js/controllers/sync.js"></script>
     <script src="js/controllers/offlinemap.js"></script>
     <script src="js/controllers/archiveTiles.js"></script>
 
@@ -59,6 +60,7 @@
     <script src="js/services/spots.js"></script>
     <script src="js/services/newspot.js"></script>
     <script src="js/services/mapview.js"></script>
+    <script src="js/services/dosync.js"></script>
 
     <!-- ng factories -->
     <script src="js/factories/OfflineTileFactory.js"></script>
