--- a/www/index.html
+++ b/www/index.html
@@ -69,6 +69,7 @@
     <script src="js/factories/SpotsFactory.js"></script>
     <script src="js/factories/ViewExtentFactory.js"></script>
     <script src="js/factories/LoginFactory.js"></script>
+    <script src="js/factories/StraboServerFactory.js"></script>
 
   </head>
   <body ng-app="app">
