Setup for dealing with multiple spot types

--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,7 @@
     <script src="js/controllers/spot.js"></script>
     <script src="js/controllers/spots.js"></script>
     <script src="js/controllers/sync.js"></script>
+    <script src="js/controllers/spotType-modal.js"></script>
     <script src="js/controllers/offlinemap.js"></script>
     <script src="js/controllers/archiveTiles.js"></script>
     <script src="js/controllers/debug.js"></script>
