added symbology logic

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 
     <!-- misc javascript utils : globals -->
     <script src="js/misc.js"></script>
-    
+
     <!-- Stylesheets -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -69,6 +69,7 @@
     <script src="js/factories/ViewExtentFactory.js"></script>
     <script src="js/factories/LoginFactory.js"></script>
     <script src="js/factories/StraboServerFactory.js"></script>
+    <script src="js/factories/ImagesFactory.js"></script>
 
   </head>
   <body ng-app="app">
