--- a/www/index.html
+++ b/www/index.html
@@ -71,6 +71,12 @@
     <script src="js/factories/StraboServerFactory.js"></script>
     <script src="js/factories/ImagesFactory.js"></script>
 
+    <!-- content models -->
+    <script src="js/content_models/orientation_survey.js"></script>
+    <script src="js/content_models/orientation_choices.js"></script>
+    <script src="js/content_models/shear_zone_survey.js"></script>
+    <script src="js/content_models/shear_zone_choices.js"></script>
+
   </head>
   <body ng-app="app">
     <ion-nav-view></ion-nav-view>
