added in-line message for required fields

--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,9 @@
     <!-- ngCordova -->
     <script src="lib/ng-cordova.js"></script>
 
+    <!-- ngMessages -->
+    <script src="lib/angular-messages.js"></script>
+
     <!-- localforage -->
     <script src="lib/localforage.js"></script>
     <script src="lib/angular-localForage.js"></script>
