--- a/www/index.html
+++ b/www/index.html
@@ -75,6 +75,8 @@
     <script src="js/factories/ImagesFactory.js"></script>
 
     <!-- content models -->
+    <script src="js/content_models/contact_survey.js"></script>
+    <script src="js/content_models/contact_choices.js"></script>
     <script src="js/content_models/orientation_survey.js"></script>
     <script src="js/content_models/orientation_choices.js"></script>
     <script src="js/content_models/shear_zone_survey.js"></script>
