--- a/www/index.html
+++ b/www/index.html
@@ -77,6 +77,8 @@
     <!-- content models -->
     <script src="js/content_models/contact_survey.js"></script>
     <script src="js/content_models/contact_choices.js"></script>
+    <script src="js/content_models/fault_survey.js"></script>
+    <script src="js/content_models/fault_choices.js"></script>
     <script src="js/content_models/orientation_survey.js"></script>
     <script src="js/content_models/orientation_choices.js"></script>
     <script src="js/content_models/shear_zone_survey.js"></script>
