added fold content model

--- a/www/index.html
+++ b/www/index.html
@@ -79,6 +79,8 @@
     <script src="js/content_models/contact_choices.js"></script>
     <script src="js/content_models/fault_survey.js"></script>
     <script src="js/content_models/fault_choices.js"></script>
+    <script src="js/content_models/fold_survey.js"></script>
+    <script src="js/content_models/fold_choices.js"></script>
     <script src="js/content_models/orientation_survey.js"></script>
     <script src="js/content_models/orientation_choices.js"></script>
     <script src="js/content_models/shear_zone_survey.js"></script>
