--- a/www/index.html
+++ b/www/index.html
@@ -83,6 +83,8 @@
     <script src="js/content_models/fold_choices.js"></script>
     <script src="js/content_models/orientation_survey.js"></script>
     <script src="js/content_models/orientation_choices.js"></script>
+    <script src="js/content_models/rock_description_survey.js"></script>
+    <script src="js/content_models/rock_description_choices.js"></script>
     <script src="js/content_models/shear_zone_survey.js"></script>
     <script src="js/content_models/shear_zone_choices.js"></script>
 
