added sample locality content model

--- a/www/index.html
+++ b/www/index.html
@@ -85,6 +85,8 @@
     <script src="js/content_models/orientation_choices.js"></script>
     <script src="js/content_models/rock_description_survey.js"></script>
     <script src="js/content_models/rock_description_choices.js"></script>
+    <script src="js/content_models/sample_locality_survey.js"></script>
+    <script src="js/content_models/sample_locality_choices.js"></script>
     <script src="js/content_models/shear_zone_survey.js"></script>
     <script src="js/content_models/shear_zone_choices.js"></script>
 
