added spot grouping content model

--- a/www/index.html
+++ b/www/index.html
@@ -89,6 +89,8 @@
     <script src="js/content_models/sample_locality_choices.js"></script>
     <script src="js/content_models/shear_zone_survey.js"></script>
     <script src="js/content_models/shear_zone_choices.js"></script>
+    <script src="js/content_models/spot_grouping_survey.js"></script>
+    <script src="js/content_models/spot_grouping_choices.js"></script>
 
   </head>
   <body ng-app="app">
