--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,10 @@
     <!-- misc javascript utils : globals -->
     <script src="js/misc.js"></script>
 
+    <!-- utilties -->
+    <script src="js/util/CoordinateRange.js"></script>
+
+
     <!-- Stylesheets -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
