changed js alerts/confirms to ionic alerts/confirms

--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Strabo Mobile</title>
 
     <!-- underscore -->
@@ -21,15 +21,15 @@
     <script src="lib/angular-localForage.js"></script>
 
     <!-- openlayers 3 -->
-    <link rel="stylesheet" href="lib/ol3/ol.css" />
+    <link rel="stylesheet" href="lib/ol3/ol.css">
     <script src="lib/ol3/ol-debug.js"></script>
 
     <!-- openlayers 3 popup (https://github.com/walkermatt/ol3-popup) -->
-    <link rel="stylesheet" href="lib/ol3/ol3-popup.css" />
+    <link rel="stylesheet" href="lib/ol3/ol3-popup.css">
     <script src="lib/ol3/ol3-popup.js"></script>
 
     <!-- openlayers 3 layerswitcher -->
-    <link rel="stylesheet" href="lib/ol3/ol3-layerswitcher.css" />
+    <link rel="stylesheet" href="lib/ol3/ol3-layerswitcher.css">
     <script src="lib/ol3/ol3-layerswitcher.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
