--- a/www/index.html
+++ b/www/index.html
@@ -77,6 +77,7 @@
     <script src="js/factories/LoginFactory.js"></script>
     <script src="js/factories/StraboServerFactory.js"></script>
     <script src="js/factories/ImagesFactory.js"></script>
+    <script src="js/factories/MapLayerFactory.js"></script>
 
     <!-- content models -->
     <script src="js/content_models/contact_survey.js"></script>
