--- a/www/index.html
+++ b/www/index.html
@@ -57,6 +57,7 @@
     <script src="js/controllers/map.js"></script>
     <script src="js/controllers/spot.js"></script>
     <script src="js/controllers/spots.js"></script>
+    <script src="js/controllers/settings.js"></script>
     <script src="js/controllers/sync.js"></script>
     <script src="js/controllers/typeModal.js"></script>
     <script src="js/controllers/offlinemap.js"></script>
@@ -78,6 +79,7 @@
     <script src="js/factories/StraboServerFactory.js"></script>
     <script src="js/factories/ImagesFactory.js"></script>
     <script src="js/factories/MapLayerFactory.js"></script>
+    <script src="js/factories/SettingsFactory.js"></script>
 
     <!-- content models -->
     <script src="js/content_models/contact_survey.js"></script>
