added normalizeBytes to normalize byte values

--- a/www/index.html
+++ b/www/index.html
@@ -81,6 +81,9 @@
     <script src="js/factories/MapLayerFactory.js"></script>
     <script src="js/factories/SettingsFactory.js"></script>
 
+    <!-- ng filters -->
+    <script src="js/filters/normalizeBytes.js"></script>
+
     <!-- content models -->
     <script src="js/content_models/contact_survey.js"></script>
     <script src="js/content_models/contact_choices.js"></script>
