--- a/www/index.html
+++ b/www/index.html
@@ -55,8 +55,8 @@
     <script src="js/controllers/spot.js"></script>
     <script src="js/controllers/spots.js"></script>
     <script src="js/controllers/settings.js"></script>
-    <script src="js/controllers/sync.js"></script>
     <script src="js/controllers/typeModal.js"></script>
+    <script src="js/controllers/syncModal.js"></script>
     <script src="js/controllers/offlinemap.js"></script>
     <script src="js/controllers/archiveTiles.js"></script>
     <script src="js/controllers/debug.js"></script>
