--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,7 @@
     <script src="js/app.js"></script>
 
     <!-- ng controllers -->
+    <script src="js/controllers/login.js"></script>
     <script src="js/controllers/map.js"></script>
     <script src="js/controllers/spot.js"></script>
     <script src="js/controllers/spots.js"></script>
