--- a/www/index.html
+++ b/www/index.html
@@ -83,6 +83,10 @@
     <script src="js/filters/normalizeBytes.js"></script>
 
     <!-- content models -->
+    <script src="js/content_models/contacts_and_traces_survey.js"></script>
+    <script src="js/content_models/contacts_and_traces_choices.js"></script>
+    <script src="js/content_models/measurements_and_observations_survey.js"></script>
+    <script src="js/content_models/measurements_and_observations_choices.js"></script>
     <script src="js/content_models/contact_survey.js"></script>
     <script src="js/content_models/contact_choices.js"></script>
     <script src="js/content_models/fault_survey.js"></script>
