split spot.html into separate files

--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,8 @@
     <!-- ng services -->
     <script src="js/services/spots.js"></script>
     <script src="js/services/newspot.js"></script>
+    <script src="js/services/CurrentSpotService.js"></script>
+    <script src="js/services/dosync.js"></script>
     <script src="js/services/mapview.js"></script>
     <script src="js/services/dosync.js"></script>
 
