--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,9 @@
     <script src="lib/localforage.js"></script>
     <script src="lib/angular-localForage.js"></script>
 
+    <!-- turf -->
+    <script src="lib/turf/turf.js"></script>
+
     <!-- openlayers 3 -->
     <link rel="stylesheet" href="lib/ol3/ol.css">
     <script src="lib/ol3/ol-debug.js"></script>
