split spot controller into separate controllers for each tab

--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,18 @@
     <script src="js/controllers/archiveTiles.js"></script>
     <script src="js/controllers/debug.js"></script>
 
+    <!-- ng tab controllers -->
+    <script src="js/controllers/tabs/SpotTabDetails.js"></script>
+    <script src="js/controllers/tabs/SpotTabNotes.js"></script>
+    <script src="js/controllers/tabs/SpotTabPhotos.js"></script>
+    <script src="js/controllers/tabs/SpotTabGeoreference.js"></script>
+    <script src="js/controllers/tabs/SpotTabRockdescription.js"></script>
+    <script src="js/controllers/tabs/SpotTabRocksample.js"></script>
+    <script src="js/controllers/tabs/SpotTabLinks.js"></script>
+    <script src="js/controllers/tabs/SpotTabGroups.js"></script>
+    <script src="js/controllers/tabs/SpotTabGroupmembers.js"></script>
+
+
     <!-- ng services -->
     <script src="js/services/spots.js"></script>
     <script src="js/services/newspot.js"></script>
