added tab for custom fields

--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
     <script src="js/controllers/tabs/SpotTabLinks.js"></script>
     <script src="js/controllers/tabs/SpotTabGroups.js"></script>
     <script src="js/controllers/tabs/SpotTabGroupmembers.js"></script>
-
+    <script src="js/controllers/tabs/SpotTabCustom.js"></script>
 
     <!-- ng services -->
     <script src="js/services/spots.js"></script>
