--- a/www/index.html
+++ b/www/index.html
@@ -81,7 +81,7 @@
     <script src="js/services/spots.js"></script>
     <script src="js/services/newspot.js"></script>
     <script src="js/services/CurrentSpotService.js"></script>
-    <script src="js/services/dosync.js"></script>
+    <script src="js/services/SyncService.js"></script>
     <script src="js/services/mapview.js"></script>
 
     <!-- ng factories -->
