add functionality to use an image as a basemap

--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,8 @@
     <script src="js/controllers/offlinemap.js"></script>
     <script src="js/controllers/archiveTiles.js"></script>
     <script src="js/controllers/debug.js"></script>
+    <script src="js/controllers/image-maps.js"></script>
+    <script src="js/controllers/image-map.js"></script>
 
     <!-- ng tab controllers -->
     <script src="js/controllers/tabs/SpotTabDetails.js"></script>
@@ -83,6 +85,7 @@
     <script src="js/services/CurrentSpotService.js"></script>
     <script src="js/services/SyncService.js"></script>
     <script src="js/services/mapview.js"></script>
+    <script src="js/services/ImageMapService.js"></script>
 
     <!-- ng factories -->
     <script src="js/factories/OfflineTileFactory.js"></script>
