Added "use strict"; where missing. Created services for local storage and coordinate range and a lib file for base 64 encodings

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,9 @@
     <!-- turf -->
     <script src="lib/turf/turf.js"></script>
 
+    <!-- Base64 Encoding -->
+    <script src="lib/base64.js"></script>
+
     <!-- openlayers 3 -->
     <link rel="stylesheet" href="lib/ol3/ol.css">
     <script src="lib/ol3/ol-debug.js"></script>
@@ -37,10 +40,6 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
-    <!-- utilties -->
-    <script src="js/util/CoordinateRange.js"></script>
-
 
     <!-- Stylesheets -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -86,6 +85,8 @@
     <script src="js/services/SyncService.js"></script>
     <script src="js/services/mapview.js"></script>
     <script src="js/services/ImageMapService.js"></script>
+    <script src="js/services/CoordinateRange.js"></script>
+    <script src="js/services/LocalStorage.js"></script>
 
     <!-- ng factories -->
     <script src="js/factories/OfflineTileFactory.js"></script>
