file structure reorganization and file renaming for consistency

--- a/www/app/map/image-maps.html
+++ b/www/app/map/image-maps.html
@@ -4,7 +4,7 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
     <div class="padding" ng-if="!imageMaps.length">
-      In the Photos tab for Spot, add an image to a Spot and check the Annotate box to make it available for annotation.
+      In the Images tab for Spot, add an image to a Spot and check the Annotate box to make it available for annotation.
     </div>
     <ion-list>
       <ion-item ng-repeat="imageMap in imageMaps"
