--- a/www/app/spot/abstract-spot.html
+++ b/www/app/spot/abstract-spot.html
@@ -33,9 +33,9 @@ navigation history that also transitions its views in and out.
     Notes
   </a>
   <a class="button button-clear spot-tab-inactive"
-     ng-class="{ 'spot-tab-active': $state.current.name == 'spotTab.photos'}"
-     ng-click="switchTabs('photos');">
-    Photos
+     ng-class="{ 'spot-tab-active': $state.current.name == 'spotTab.images'}"
+     ng-click="switchTabs('images');">
+    Images
   </a>
   <a class="button button-clear spot-tab-inactive"
      ng-class="{ 'spot-tab-active': $state.current.name == 'spotTab.georeference'}"
