--- a/www/app/spot/rockdescription-tab.html
+++ b/www/app/spot/rockdescription-tab.html
@@ -94,7 +94,7 @@
             </div>
             <div ng-if="rockDescriptionForm[field.name].$touched">
               <div ng-messages="rockDescriptionForm[field.name].$error">
-                <div ng-messages-include="templates/error-messages.html"></div>
+                <div ng-messages-include="app/spot/error-messages.html"></div>
               </div>
             </div>
           </div>
