--- a/www/app/spot/details-tab.html
+++ b/www/app/spot/details-tab.html
@@ -95,7 +95,7 @@
               </div>
               <div ng-if="straboForm[field.name].$touched">
                 <div ng-messages="straboForm[field.name].$error">
-                  <div ng-messages-include="templates/error-messages.html"></div>
+                  <div ng-messages-include="app/spot/error-messages.html"></div>
                 </div>
               </div>
             </div>
