--- a/www/app/spot/georeference-tab.html
+++ b/www/app/spot/georeference-tab.html
@@ -21,7 +21,7 @@
 
         <div ng-if="geoForm['lat'].$touched">
           <div ng-messages="geoForm['lat'].$error">
-            <div ng-messages-include="templates/error-messages.html"></div>
+            <div ng-messages-include="app/spot/error-messages.html"></div>
           </div>
         </div>
 
@@ -35,7 +35,7 @@
 
         <div ng-if="geoForm['lng'].$touched">
           <div ng-messages="geoForm['lng'].$error">
-            <div ng-messages-include="templates/error-messages.html"></div>
+            <div ng-messages-include="app/spot/error-messages.html"></div>
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
 
       <div ng-if="geoForm['x'].$touched">
         <div ng-messages="geoForm['x'].$error">
-          <div ng-messages-include="templates/error-messages.html"></div>
+          <div ng-messages-include="app/spot/error-messages.html"></div>
         </div>
       </div>
       <label ng-show="showXY"
@@ -63,7 +63,7 @@
 
       <div ng-if="geoForm['y'].$touched">
         <div ng-messages="geoForm['y'].$error">
-          <div ng-messages-include="templates/error-messages.html"></div>
+          <div ng-messages-include="app/spot/error-messages.html"></div>
         </div>
       </div>
       </div>
