--- a/www/app/spots/spot-types-modal.html
+++ b/www/app/spots/spot-types-modal.html
@@ -4,8 +4,9 @@
     <div class="button button-clear" ng-click="closeModal('allModal')"><span class="icon ion-close"></span></div>
   </ion-header-bar>
   <ion-content>
-    <ion-list ng-controller="ModalController">
-      <ion-item ng-repeat="item in spotTypes" href="#/spotTab//{{item.tab}}" ng-click="closeModal('allModal');setSpotType(item.value)">
+    <ion-list ng-controller="SpotTypeController as newSpot">
+      <ion-item ng-repeat="item in newSpot.getSpotTypes" href="#/spotTab//{{item.tab}}"
+                ng-click="closeModal('allModal');newSpot.setSpotType(item.value)">
         {{item.label}}
       </ion-item>
     </ion-list>
